scss/components/_calendar.scss
// Calendar

.fc-view-container {
  font-family: $sans-serif;
}

.fc-bg {
  z-index: -1;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;

  .fc-day {
    font-weight: bold;
    padding: .7rem 1rem 0 2rem;
  }
}

.fc-row {
  position: relative;
}

// Controls
.fc-toolbar {
  @include clearfix();
  border-bottom: 2px solid $primary;
  padding: 2rem 0 1.5rem 0;
}

.fc-left {
  float: right;

  .fc-button-group {
    float: left;
    margin-right: 1rem;
  }

  .fc-today-button {
    float: left;
  }

  .fc-prev-button,
  .fc-next-button {
    margin-right: 1px;
    text-indent: -9999px;
    padding: .8rem 1rem;

    &:first-of-type {
      border-radius: 4px 0 0 4px;
    }

    &:last-of-type {
      border-radius: 0 4px 4px 0;
    }

    &:after {
      left: .5rem;
      right: .5rem;
    }
  }
}

.fc-state-active.button--neutral {
  background-color: $beige-dark;
  border: 2px solid $primary;
}

.fc-right {
  display: none;
}

.fc-center {
  text-align: left;

  h2 {
    margin: 0;
  }
}

// Body

.fc-day-header {
  color: $primary;
  font-weight: normal;
  padding-top: .5rem;
}

.fc-content-skeleton {
  height: 100%;

  table {
    min-height: 12rem;
  }
}

.fc-other-month {
  &.fc-day-number,
  &.fc-day {
    opacity: .5;
  }
}

.fc-week {
  td:not(.fc-day-number) {
    border-width: 0 2px;
    border-style: solid;
    border-color: $neutral;
    border-top: none;
  }

  &:last-child {
    border-bottom: 2px solid $neutral;
  }
}

.fc-day-number {
  border: 2px solid $neutral;
  border-bottom: none;
  color: $primary;
  font-weight: bold;
  padding: .5rem 1rem;
}

.fc-today {
  background-color: $neutral;
}

.fc-event-container {
  padding: 2px;
  vertical-align: top;
}

.fc-content {
  @include u-truncate();
  background: $beige;
  border-radius: 4px;
  color: $cream;
  font-size: 1.4rem;
  line-height: 1.2;
  padding: 4px;

}

.fc-limited {
  display: none;
}

// Events
.fc--election {
  .fc-content {
    background: $cal-election;
    color: $cream;
  }
}

.fc--deadline {
  .fc-content {
    background: $cal-deadline;
    color: $cream;
  }
}

.fc--outreach {
  .fc-content {
    background: $cal-outreach;
    color: $cream;
  }
}

.fc--rules {
  .fc-content {
    background: $cal-rules;
    color: $cream;
  }
}

.fc--meeting {
  .fc-content {
    background: $cal-meeting;
    color: $cream;
  }
}

.fc--other {
  .fc-content {
    background: $cal-other;
    color: $cream;
  }
}

// Event details
.cal-details {
  font-size: 1.4rem;
  margin-top: 1rem;
  padding: 2rem;
  text-align: left;
  width: 26rem;
  white-space: initial;

  .button--close--primary {
    position: absolute;
    top: 0;
    right: 0;
  }
}

.cal-details__date {
  display: block;
  font-weight: bold;
  padding-bottom: 1rem;
}

.cal-details__title {
  display: block;
  font-weight: bold;
  line-height: 1.4;
  padding-bottom: .5rem;
}

.cal-details__summary {
  display: block;
  line-height: 1.2;
  padding-bottom: .5rem;
}

.cal-details__location {
  display: block;
  line-height: 1.2;
  padding-bottom: .5rem;
}

.cal-details__add {
  padding-top: 1rem;
}

.fc-popup {
  background: $cream;
  border: 2px solid $neutral;
  position: absolute;
  max-width: 20rem;

  .button {
    position: absolute;
    top: 0;
    right: 0;
    width: 3rem;
    height: 3rem;
  }
}

.fc-popup__header {
  background: $neutral;
  color: $primary;
  font-weight: bold;
  padding: 4px;
  position: relative;
}

// Week view
.fc-time-grid-container {
  overflow: scroll;
}

.fc-time-grid {
  position: relative;

  .fc-content-skeleton {
    border-bottom: 2px solid $neutral;
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
  }
}

.fc-slats {
  td {
    height: 1.5rem;
  }

  tr {
    border: 2px solid $neutral;
    border-bottom: none;
  }

  .fc-minor {
    border-bottom: none;
    border-top: none;
  }
}

.fc-agenda-view {
  .fc-bg {
    display: none;   // Temporary hack to remove mis-aligned background in agenda view
  }

  .fc-axis {
    padding: .5rem 1rem 0 1rem;
    text-align: right;
    vertical-align: middle;
    white-space: nowrap;
  }

  .fc-divider {
    display: none;
  }

  .fc-week {
    border-top: 2px solid $neutral;
  }
}

// List view
.cal-list__toggles {
  padding-top: 2rem;
}

.cal-list__group {
  border-bottom: 1px solid $primary;

  &:last-child {
    border-bottom: none;
    padding-top: 2rem;
  }
}

.cal-list__title {
  margin: 0;
  padding: 2rem 0;
}

.cal-list__event {
  @include clearfix();
  border-bottom: 1px solid $neutral;
  padding: 2rem 0;
}

.cal-list__details {
  @include span-columns(8);
}

.cal-list__add {
  @include span-columns(4);

  .button {
    float: right;
  }
}

.cal-list__date {
  @include span-columns(4 of 8);
  font-weight: bold;
  line-height: 1.7rem;
}

.cal-list__time {
  @include span-columns(4 of 8);
  @include omega();
  line-height: 1.7rem;
}

.cal-list__description {
  @include span-columns(8 of 8);
  padding-top: 2rem;

  p {
    font-size: 1.4rem;
  }
}

.cal-list__event-title {
  margin: 0;
}

.cal-list__location {
  display: block;
}

// Popover
.fc-popover {
  background-color: $cream;
  border: 2px solid $neutral;
  position: absolute;
  width: 22rem;

  .fc-header {
    background: $neutral;
    padding: 3px .5rem;

    .fc-title {
      float: left;
      font-weight: bold;
      line-height: 2rem;
    }
  }

  .fc-close {
    @include u-background-image('../img/i-x--primary');
    color: $primary;
    cursor: pointer;
    float: right;
    height: 2rem;
    width: 2rem;
  }

  .fc-event-container {
    padding: .5rem;
  }

  .fc-content {
    margin-bottom: .5rem;
  }
}

.fc-clear {
  clear: both;
}

// BREAKPOINT: MEDIUM
// - Navigation buttons on the left
// - Title in the center
// - View buttons on the right

@include media($med) {
  .fc-left {
    float: left;
  }

  .fc-center {
    text-align: center;
  }

  .fc-right {
    display: block;
    float: right;
  }
}

// BREAKPOINT: LARGE
// - List events line up horizontally

@include media($lg) {
  .cal-list__event {
    @include clearfix();
    padding-bottom: 4rem;
  }

  .cal-list__details {
    @include span-columns(10);
  }

  .cal-list__add {
    @include span-columns(2);
  }

  .cal-list__date {
    @include span-columns(2 of 10);
    font-weight: bold;
  }

  .cal-list__time {
    @include span-columns(2 of 10);
  }

  .cal-list__description {
    @include span-columns(6 of 10);
    padding-top: 0;

    p {
      font-size: 1.6rem;
    }

  }
}

